fix: align text in styles

--- a/src/app/modules/query/components/query-result/query-result.component.css
+++ b/src/app/modules/query/components/query-result/query-result.component.css
@@ -78,6 +78,7 @@ h1 {
 #price > span {
   font-family: var(--text-primary);
   font-weight: 700;
+  text-align: center;
 }
 
 #price_model {
